# Connected-Subgraph-Problem

./: .gitignore  README.md  index.html  main.py  mip_model.py  pyproject.toml  utils.py  visualization.py  vite.config.ts
.claude/: settings.local.json
formulation/: edge_diff.py  heuristic.py  xy_boundbox.py
mip_model/: xy_minmax.py
src/: i18n.ts  katex-auto-render.d.ts  main.ts  solver.ts  solver.worker.ts
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: i18n.ts  main.ts  solver.ts  solver.worker.ts
